src/style/base.css
/***** general *****/
body {
    font-family: Arial, sans-serif;
    font-size: 3vw;
}

button {
    font-size: 3vw;
}

.row { display: table-row; }

/* clear fix */
.float-group > * { float: left; }

.float-group:after {
    content: "";
    display: table;
    clear: both;
}

.no-data {
    visibility: hidden;
}

/***** page-level *****/
#location, .mode-label { text-align: center; }

/***** weather page directive *****/
.weather-page .date { text-align: center; }

.weather-page .icon { width: 25%; }

.weather-page .current-container { width: 75%; }

.weather-page .buttons { text-align: center; }

/***** help modal directive *****/
.help-container {
    position: relative;
    display: inline-block;
}

.help-toggle {
    color: #bbb;
    cursor: pointer;
}

.help-modal {
    position: absolute;
    z-index: 1000;

    margin: 5px;

    border-width: 2px;
    border-style: solid;
    border-color: #008;

    padding: 5px;

    background: #e0e0ff;

    min-width: 350px;

    box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
}

/***** preferences *****/
#modal-background {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 100;

    width: 100%;
    height: 100%;

    background: #356;
    opacity: 0.5;
}

#preferences-modal {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 200;

    margin: 5px;

    border-width: 2px;
    border-style: solid;
    border-color: #ccc #555 #555 #ccc;
    border-radius: 5px;

    padding: 50px 5px 5px;

    background: #fff;
}

#preferences-modal .close {
    position: absolute;
    top: 1vw;
    right: 1vw;

    font-size: 6vw;

    cursor: pointer;
}

#preferences-modal .category { text-align: center; }

#preferences-modal .prefs-group {
    margin: 5px;

    border-width: 2px;
    border-style: solid;
    border-color: #ccc #555 #555 #ccc;
    border-radius: 5px;

    padding: 5px;
}

#preferences-modal input[type="text"], input[type="number"] {
    font-size: 3vw;
}

#preferences-modal input[type="checkbox"], input[type="radio"] {
    width: 3vw;
    height: 3vw;
}

#preferences-modal .units label, #preferences-modal .units input {
    display: table-cell;
}

#preferences-modal .help-modal .example {
    color: #777;
    font-style: italic;
}

#preferences-modal .right-side .help-modal { right: 0; }

